--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 text_skin: chocolate # "default" (default), "dark", "forest", "ocean", "chocolate", "orange"
 highlight_theme: default # "default" (default), "tomorrow", "tomorrow-night", "tomorrow-night-eighties", "tomorrow-night-blue", "tomorrow-night-bright"
 url     : # the base hostname & protocol for your site e.g. https://www.someone.com
-baseurl : /latex/ # will drop later... # does not include hostname
+baseurl : # does not include hostname
 title   : LaTeX nerd
 description: > # this means to ignore newlines until "Language & timezone"
   LaTeX blog
